...
      <Tabs.Screen
        name="profile"
        options={{
          href: isAdmin ? null : undefined,
          title: 'Profile',
          tabBarIcon: makeTabIcon(User),
          tabBarButtonTestID: 'tab-profile',
        }}
      />
    </Tabs>
  );
}

