...
      name: 'Home', 
      page: 'Welcome', 
      icon: Home,
      url: createPageUrl('Welcome')
    },
    { 
      name: 'Directory', 
      page: 'Directory', 
      icon: Users,
      url: createPageUrl('Directory') + (propertyId ? `?propertyId=${propertyId}` : '')
    },
    { 
      name: 'Community', 
...
